# dup-file-finder-rs

./: .env  .gitignore  Cargo.toml  README.md  config.toml  config.toml.example
.github/workflows/: rust.yml
doc/: get_dups.sql
docs/: get_dups.sql
migrations/: 20241222055720_file_hash.sql  20241222060021_file.sql  20241223002339_file_view.sql
src/: dup_finder.rs  lib.rs  main.rs
