[package]
name = "hashfile"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
dotenvy = "0.15.7"
log = "0.4.22"
sea-query = "0.32.1"
sea-query-binder = { version = "0.7.0", features = ["sqlx-sqlite"] }
sqlx = { version = "0.8.2", features = ["sqlite","runtime-tokio"] }
tokio = { version = "1.42.0", features = ["full"] }
twox-hash = "2.1.0"
walkdir = "2.5.0"
csv = "1.3.1"
